implement student mapper and controller